--- a/guides/source/ubiquo_jobs.textile
+++ b/guides/source/ubiquo_jobs.textile
@@ -16,6 +16,28 @@ This guide will walk you through ubiquo_jobs internals and contains a tutorial t
 
 endprologue.
 
+h3. Synopsis
+
+Sometimes, we need to spawn a process to do some task asynchronously, without blocking the usual flow of an application. Instead of just calling a method of our model, Ubiquo Jobs provides a way to run jobs automatically at a given time, taking the resources (workers) that we give it.
+
+As an example, here's how we'd create a job to mail a couple of users a happy new year mail.
+
+<ruby>
+class Ubiquo::ArticlesController < UbiquoController
+ def index
+    ...
+  MassMailer.run_async(:options => {
+    :recipients => ['one@one.one', 'two@two.two']
+    :subject => "Happy new year!"
+  },
+     :planified_at => DateTime.now.end_of_year,
+     :name => "New year's mail" ,
+     :priority => 1000)
+end
+</ruby>
+
+MassMailer is a subclass of +UbiquoJobs::Jobs::Base+, that's placed in +app/jobs+ directory, and overrides +do_job_work+. +do_job_work+ is the method that will be called when a worker take this job.
+
 h3. Creating job types
 
 For every different kind of work that you want to be done you need to create a new job type. This essentially means that you have to:
@@ -47,27 +69,67 @@ end
 
 h4. Parameters
 
-If your job needs to be parameterized, use the options hash when creating to set all the needed parameters:
+If your job needs to be parameterized, use the options hash when creating it to set the needed parameters for it.  All the parameters that you pass from the caller through the options hash will be retained until the job is run.
 
 <ruby>
 MassMailer.run_async(:options => {
   :recipients => ['one@one.one', 'two@two.two']
-  :subject => 'This is an example'
+  :subject => t('app.mass_mailer.mail_subject')
   :type => :one_time_mail
 })
 </ruby>
 
 You can use virtual attributes to get parameters, but keep in mind that every thing that is not stored inside options will likely be lost at runtime (when a worker executes your job), since for custom parameters only the options hash has the persistence guaranteed.
 
+h4. Naming and Job scheduling
+
+    Jobs can be scheduled to run at a given time. To configure a job for a concrete time, we must pass a parameter to run_async that will indicate the DateTime when this job should wake up.  We can also give it a name to make it easier to track when it's on waiting queue.
+
+<ruby>
+MassMailer.run_async(:options => {
+  :recipients => ['one@one.one', 'two@two.two']
+  :subject => "Happy new year!"
+  :type => :one_time_mail
+},
+   :planified_at => DateTime.now.end_of_year,
+   :name => "New year's mail" 	)
+</ruby>
+
+When a job is scheduled, it's added to the job queue (normally kept in
+the database), and we can manage it from the +Jobs+ tab in the
++superadmin mode+ page.
+
+In the +superadmin+ page, users (with appropiate rights) can see the
+progress of jobs, stop them and see the logs.
+
+Here we see an screenshot of a job that is waiting to publish an article on twitter
+
+!images/ubiquo_jobs/queued_job.png(Queued job)!
+
+h4. Priority
+
+There are three different priorities that will rule the resource management when there are more jobs than workers.
+
+We can set the priority when defining our jobs or change the priority of a given job from the Jobs list in +superadmin+ view. 
+
+To set a different priority from the default (low), we can set our own priority with a :priority parameter, being 1 the highest priority.
+
+Defaults are 10 for high, 100 for medium and 1000 for low priority (default).
+
+
 h4. Return code
 
 In +ExampleJob+ the last line is a +return 0+ statement. The Job Manager needs to know if the job has been executed correctly, and that, unless exceptions are raised, is something that every job must tell to the manager by returning an error code.
+
+The property result_output is where we can put a text that will be displayed in the jobs list telling how did the process go.  When a worker takes a job, it puts itself as the +runner+ of the job, 
 
 NOTE: This might change in the future to assume that everything went fine unless an exception is raised.
 
 h3. ActiveJob
 
-If you know for sure that you will be using the ActiveJob implementation, you can freely use ActiveModel/ActiveRecord goodies in your job classes, including validations or callbacks.
+UbiquoJobs::Jobs::ActiveJob is the default implementation of jobs. If you know for sure that you will be using the ActiveJob implementation, you can freely use ActiveModel/ActiveRecord goodies in your job classes, including validations or callbacks.
+
+It's possible to implement different Job backend, putting them in files, for example.
 
 h4. Validations
 
@@ -123,10 +185,14 @@ h3. Workers
 
 Now that we know how to create new job types, it's time to know how to execute them, The process that executes planified jobs is called a worker. Hence, all what is needed here is to start a worker.
 
+Think of a worker as a thread or process that will be given a procedure to run.  This procedure is one of the jobs that are in the job queue, so workers are just CPU power units not tied to a given task.
+
+To spawn a worker, there's a rake task for it.
 <code>
-script/ubiquo_worker worker_id
+rake ubiquo:worker:start[name,interval]
 </code>
 
+ZSH users note: http://scottw.com/zsh-rake-parameters
 NOTE: Every worker must have a unique and known id. This is because when a job is started, the Job Manager needs to identify which worker is doing it. In the case that a worker is killed while executing a job, starting a new worker with the same id will alert the Manager that the previous one did not finish the job, and will make this one again available to be executed.
 
 That's all - The worker will find available jobs (with the planification threshold overcame) and execute them immediately.
